syntax = "proto3";
//import "google/protobuf/empty.proto";
//import "google/protobuf/timestamp.proto";
option csharp_namespace = "BusGrpcService.Protos";
package BusGrpcService;

service BusGrpcService {

rpc CreateBus(Bus) returns (Response);
rpc GetBus(Request) returns (Bus);
rpc GetAllBusses(Request) returns (BusList);
rpc UpdateBus(Bus) returns (Response);
rpc DeleteBus(Request) returns (Response);
}


message Bus {
	int32 id = 1;
	string name = 2;
	string make = 3;
	string driver = 4;
	int32 route_id = 5;
	int32 total_bus_capacity = 6;
	int32 current_bus_occupation = 7;
	string latitude = 8;
	string longitude = 9;
}

message BusList{
    repeated Bus buslist = 1;
}

message Response {
	bool succeeded = 1;
}

message Request{
	int32 id = 1;
}